--- a/about.html
+++ b/about.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Electro</title>
     <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
+    <meta name="description" content="Elektro,
+    Danang Kurniawan,
+    Rizky Akbar Wahyu Putranto">
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
@@ -16,10 +19,10 @@
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35" alt="logo">
                     <span style="color: #FEC400;">E</span>lectro
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-label="menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -45,14 +48,14 @@
         <!-- Top Title -->
         <div class="banner d-flex flex-wrap align-items-center justify-content-center">
             <div class="col-12">
-                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px"></center>
+                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px" alt="logo"></center>
                 <h2 class="text-white text-center">About</h2>
             </div>
         </div>
         <!-- About -->
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 m-3">
-                <center><img src="image/first model.jpg" class="card-vehicle"></center>
+                <center><img src="image/first model.jpg" class="card-vehicle" alt="1"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
                 <h5>History</h5>
@@ -67,12 +70,12 @@
                 <p class="text-justify">With up to 405 miles of estimated range and access to the world’s largest and most powerful fast charging network, you’ll spend less time plugged in and more time on the road.</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/range.jpg" class="card-vehicle"></center>
+                <center><img src="image/range.jpg" class="card-vehicle" alt="2"></center>
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/safety.jpg" class="card-vehicle"></center>
+                <center><img src="image/safety.jpg" class="card-vehicle" alt="3"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
                 <h5>Safety</h5>
@@ -107,15 +110,15 @@
             <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
-                    <input type="text" class="form-control" placeholder="Name" name="">
+                    <input id="name" for="submit" type="text" class="form-control" placeholder="Name" name="">
                 </div>
                 <div class="form-group mb-2">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                    <input id="email" for="submit" type="email" class="form-control" placeholder="Email Address" name="email">
                 </div>
                 <div class="form-group mb-2">
-                    <textarea class="form-control" rows="4"></textarea>
+                    <textarea for="submit" id="textarea" class="form-control" rows="4"></textarea>
                 </div>
-                <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
+                <input id="submit" type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
             </div>
         </div>
     </footer>
