--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Electro</title>
     <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
+    <meta name="description" content="Elektro,
+    Danang Kurniawan,
+    Rizky Akbar Wahyu Putranto">
     <!-- Google Icon -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
@@ -18,10 +21,10 @@
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35" alt="logo">
                     <span style="color: #FEC400;">E</span>lectro
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-label="menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -47,7 +50,7 @@
         <!-- Top Title -->
         <div class="banner d-flex flex-wrap align-items-center justify-content-center">
             <div class="col-12">
-                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px"></center>
+                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px" alt="logo"></center>
                 <h2 class="text-white text-center">Contact Us</h2>
             </div>
         </div>
@@ -57,11 +60,11 @@
                 <!-- main -->
                 <div class="card map-card m-3 col-lg-5 col-10">
                     <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.6845099161386!2d106.82252947612652!3d-6.165824998831429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d9f8bd2c2d%3A0x7edd8ed869df05a8!2sJl.%20Ir.%20H.%20Juanda%203%20No.4%2C%20RT.9%2FRW.2%2C%20Kb.%20Klp.%2C%20Kecamatan%20Gambir%2C%20Kota%20Jakarta%20Pusat%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2010120!5e0!3m2!1sen!2sid!4v1656471864358!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.6845099161386!2d106.82252947612652!3d-6.165824998831429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d9f8bd2c2d%3A0x7edd8ed869df05a8!2sJl.%20Ir.%20H.%20Juanda%203%20No.4%2C%20RT.9%2FRW.2%2C%20Kb.%20Klp.%2C%20Kecamatan%20Gambir%2C%20Kota%20Jakarta%20Pusat%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2010120!5e0!3m2!1sen!2sid!4v1656471864358!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen title="map 1"></iframe>
                     </div>
                     <div class="card-body closed px-0">
-                        <div class="button px-2 mt-3">
-                            <a class="btn btn-floating btn-lg living-coral text-white float-end" style="margin-right: .75rem;">More</a>
+                        <div class="button px-2 mt-3" aria-label="more">
+                            <div class="btn btn-floating btn-lg living-coral text-white float-end" style="margin-right: .75rem;">More</div>
                         </div>
                         <div class="card-map-bg px-4 pb-4 pt-3-5 text-white">
                             <h5 class="card-title h5 living-coral-text">Jakarta Elekro</h5>
@@ -93,11 +96,11 @@
                 <!-- Nearest -->
                 <div class="card map-card m-3 col-lg-5 col-10">
                     <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.1671740991096!2d110.76725998525988!3d-7.556743677173739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a145b34e70fd9%3A0x4de0d1e911623a7c!2sJl.%20A.%20Yani%2C%20Mendungan%2C%20Pabelan%2C%20Kec.%20Kartasura%2C%20Kabupaten%20Sukoharjo%2C%20Jawa%20Tengah%2057169!5e0!3m2!1sen!2sid!4v1656472295682!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.1671740991096!2d110.76725998525988!3d-7.556743677173739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a145b34e70fd9%3A0x4de0d1e911623a7c!2sJl.%20A.%20Yani%2C%20Mendungan%2C%20Pabelan%2C%20Kec.%20Kartasura%2C%20Kabupaten%20Sukoharjo%2C%20Jawa%20Tengah%2057169!5e0!3m2!1sen!2sid!4v1656472295682!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen title="map 2"></iframe>
                     </div>
                     <div class="card-body closed px-0">
-                        <div class="button px-2 mt-3">
-                            <a class="btn btn-floating btn-lg living-coral text-white float-end" style="margin-right: .75rem;">More</a>
+                        <div class="button px-2 mt-3" aria-label="more">
+                            <div class="btn btn-floating btn-lg living-coral text-white float-end" style="margin-right: .75rem;">More</div>
                         </div>
                         <div class="card-map-bg px-4 pb-4 pt-3-5 text-white">
                             <h5 class="card-title h5 living-coral-text">Surakarta Elektro</h5>
@@ -135,7 +138,7 @@
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
-                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink" alt="logo">
                                 <title>Calls</title>
                                 <desc>A line styled icon from Orion Icon Library.</desc>
                                 <path data-name="layer1" d="M58.9 47l-10.4-6.8a4.8 4.8 0 0 0-6.5 1.3c-2.4 2.9-5.3 7.7-16.2-3.2S19.6 24.4 22.5 22a4.8 4.8 0 0 0 1.3-6.5L17 5.1c-.9-1.3-2.1-3.4-4.9-3S2 6.6 2 15.6s7.1 20 16.8 29.7S39.5 62 48.4 62s13.2-8 13.5-10-1.7-4.1-3-5z" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path>
@@ -150,7 +153,7 @@
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
-                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink" alt="logo">
                                 <title>At Sign @</title>
                                 <desc>A line styled icon from Orion Icon Library.</desc>
                                 <circle data-name="layer2" cx="31" cy="32" r="14" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></circle>
@@ -166,7 +169,7 @@
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
-                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink" alt="logo">
                                 <title>Instagram</title>
                                 <desc>A line styled icon from Orion Icon Library.</desc>
                                 <path data-name="layer2" d="M44.122 2H19.87A17.875 17.875 0 0 0 2 19.835v24.2a17.875 17.875 0 0 0 17.87 17.834h24.252A17.875 17.875 0 0 0 62 44.034v-24.2A17.875 17.875 0 0 0 44.122 2zM55.96 44.034a11.825 11.825 0 0 1-11.838 11.812H19.87A11.825 11.825 0 0 1 8.032 44.034v-24.2A11.825 11.825 0 0 1 19.87 8.022h24.252A11.825 11.825 0 0 1 55.96 19.835zm0 0" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="miter"></path>
@@ -182,7 +185,7 @@
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
-                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink" alt="logo">
                                 <title>Facebook</title>
                                 <desc>A line styled icon from Orion Icon Library.</desc>
                                 <path data-name="layer1" d="M39.312 13.437H47V2h-9.094C26.938 2.469 24.688 8.656 24.5 15.125v5.719H17V32h7.5v30h11.25V32h9.281l1.781-11.156H35.75v-3.469a3.714 3.714 0 0 1 3.562-3.938z" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"></path>
@@ -221,15 +224,15 @@
             <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
-                    <input type="text" class="form-control" placeholder="Name" name="">
+                    <input id="name" for="submit" type="text" class="form-control" placeholder="Name" name="">
                 </div>
                 <div class="form-group mb-2">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                    <input id="email" for="submit" type="email" class="form-control" placeholder="Email Address" name="email">
                 </div>
                 <div class="form-group mb-2">
-                    <textarea class="form-control" rows="4"></textarea>
+                    <textarea for="submit" id="textarea" class="form-control" rows="4"></textarea>
                 </div>
-                <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
+                <input id="submit" type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
             </div>
         </div>
     </footer>
