--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Electro</title>
     <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
-    <!-- Google icon -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <meta name="description" content="Elektro,
+    Danang Kurniawan,
+    Rizky Akbar Wahyu Putranto">
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
@@ -21,7 +22,7 @@
                     <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
                     <span style="color: #FEC400;">E</span>lectro
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-label="menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -48,39 +49,39 @@
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <!-- Indicators/dots -->
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" aria-label="1" class="active"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="2"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="3"></button>
             </div>
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="image/bg3.jpg" alt="Carousel 1" class="d-block carousel-image">
+                    <img src="image/bg3.jpg" alt="Carousel 1" class="d-block carousel-image" width="100%" height="auto">
                     <div class="carousel-caption">
-                        <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                        <img src="image/elektroWhite2.svg" alt="bgcarousel" width="35" height="35">
                         <h3>Welcome</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="image/bg (2).jpg" alt="Carousel 2" class="d-block carousel-image">
+                    <img src="image/bg (2).jpg" alt="Carousel 2" class="d-block carousel-image" width="100%" height="auto">
                     <div class="carousel-caption">
-                        <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                        <img src="image/elektroWhite2.svg" alt="bgcarousel" width="35" height="35">
                         <h3>Welcome</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="image/bg1.jpg" alt="Carousel 3" class="d-block carousel-image">
+                    <img src="image/bg1.jpg" alt="Carousel 3" class="d-block carousel-image" width="100%" height="auto">
                     <div class="carousel-caption">
-                        <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                        <img src="image/elektroWhite2.svg" alt="bgcarousel" width="35" height="35">
                         <h3>Welcome</h3>
                     </div>
                 </div>
             </div>
             <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev" aria-label="left">
                 <span class="carousel-control-prev-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next" aria-label="right">
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
@@ -88,29 +89,30 @@
         <div class="d-flex flex-wrap justify-content-center mb-5">
             <div class="col-lg-3 col-md-11 col-sm-11 p-3">
                 <h4>
-                    <span class="material-symbols-outlined">speed</span><br>
+                    <img src="image/speed.svg" width="30" height="30" alt="speed">
+                    <br>
                     Performance</h4>
                 <p class="text-justify">Elektro is a car designed with an emphasis on dynamic performance, such as handling, acceleration, top speed, or thrill of driving. Our car can reach 60 miles in 2.5 seconds because there's no slow word in our dictionary</p>
             </div>
             <div class="col-lg-3 col-md-11 col-sm-11 p-3 border-teks">
                 <h4>
-                    <span class="material-symbols-outlined">directions_car</span><br>
+                    <img src="image/comfort.svg" width="30" height="30" alt="comfort"><br>
                     Comfortable</h4>
                 <p class="text-justify">Comfort is the most important point when driving. our car is the most comfortable car because it has various features that will spoil you, and we have perfect points in the crash test so that your safety will also be guaranteed</p>
             </div>
             <div class="col-lg-3 col-md-11 col-sm-11 p-3">
                 <h4>
-                    <span class="material-symbols-outlined">update</span><br>
+                    <img src="image/future.svg" width="30" height="30" alt="future"><br>
                     Future</h4>
                 <p class="text-justify">Elektro is designed with the latest technology to produce a car that is environmentally friendly but still has superior performance and a cool design.Bright future will come if you use Elektro</p>
             </div>
         </div>
-        <div class="text-center"><img class="img-fluid" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
+        <div class="text-center col-lg-12"><img class="img-fluid" src="image/divide.png" alt="" style="width: auto; max-height: 150px;"></div>
         <h2 class="text-center m-5 fw-bold">Featured Vehicle</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5 text-white">
             <div class="card m-3 col-md-3 col-10">
                 <a class="nav-link" href="vehicle.html">
-                    <img src="image/model3/exterior-image-167.jpg" class="card-img-top" alt="...">
+                    <img src="image/model3/exterior-image-167.jpg" class="card-img-home" alt="...">
                     <div class="card-body">
                         <p class="card-text text-center">Model 3</p>
                     </div>
@@ -118,7 +120,7 @@
             </div>
             <div class="card m-3 col-md-3 col-10">
                 <a class="nav-link" href="vehicle.html">
-                    <img src="image/models/exterior-image-164.webp" class="card-img-top" alt="...">
+                    <img src="image/models/exterior-image-164.webp" class="card-img-home" alt="...">
                     <div class="card-body">
                         <p class="card-text text-center">Model S</p>
                     </div>
@@ -152,15 +154,15 @@
             <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
-                    <input type="text" class="form-control" placeholder="Name" name="">
+                    <input id="name" for="submit" type="text" class="form-control" placeholder="Name" name="">
                 </div>
                 <div class="form-group mb-2">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                    <input id="email" for="submit" type="email" class="form-control" placeholder="Email Address" name="email">
                 </div>
                 <div class="form-group mb-2">
-                    <textarea class="form-control" rows="4"></textarea>
+                    <textarea for="submit" id="textarea" class="form-control" rows="4"></textarea>
                 </div>
-                <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
+                <input id="submit" type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
             </div>
         </div>
     </footer>
