--- a/vehicle.html
+++ b/vehicle.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Electro</title>
     <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
+    <meta name="description" content="Elektro,
+    Danang Kurniawan,
+    Rizky Akbar Wahyu Putranto">
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
@@ -16,10 +19,10 @@
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                    <img src="image/elektroWhite2.svg" alt="logo" width="35" height="35">
                     <span style="color: #FEC400;">E</span>lectro
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-label="menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -45,7 +48,7 @@
         <!-- Top Title -->
         <div class="banner d-flex flex-wrap align-items-center justify-content-center">
             <div class="col-12">
-                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px"></center>
+                <center><img class="m-3" src="image/elektroWhite2.svg" alt="logo banner" style="height:50px; width:50px"></center>
                 <h2 class="text-white text-center">Vehicle</h2>
             </div>
         </div>
@@ -55,8 +58,8 @@
             <div class="d-flex flex-wrap justify-content-md-start justify-content-center text-white">
                 <!-- <div class="row text-white"> -->
                 <div class="m-3 col-lg-3 col-md-3 col-11 bg-image hover-overlay">
-                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_x">
-                        <img src="image/modelx/modelx black.png" class="card-vehicle" alt="...">
+                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_x" aria-label="modelx">
+                        <img src="image/modelx/modelx black.png" class="card-vehicle" alt="modelx">
                         <hr class="m-0">
                         <div class="card-body">
                             <p class="card-text">Model X</p>
@@ -64,8 +67,8 @@
                     </div>
                 </div>
                 <div class="m-3 col-lg-3 col-md-3 col-11">
-                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_3">
-                        <img src="image/model3/model3 red.png" class="card-vehicle" alt="...">
+                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_3" aria-label="model3">
+                        <img src="image/model3/model3 red.png" class="card-vehicle" alt="model3">
                         <hr class="m-0">
                         <div class="card-body">
                             <p class="card-text">Model 3</p>
@@ -73,8 +76,8 @@
                     </div>
                 </div>
                 <div class="m-3 col-lg-3 col-md-3 col-11">
-                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_y">
-                        <img src="image/modely/modely.png" class="card-vehicle" alt="...">
+                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_y" aria-label="modely">
+                        <img src="image/modely/modely.png" class="card-vehicle" alt="modely">
                         <hr class="m-0">
                         <div class="card-body">
                             <p class="card-text">Model Y</p>
@@ -82,8 +85,8 @@
                     </div>
                 </div>
                 <div class="m-3 col-lg-3 col-md-3 col-11">
-                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_s">
-                        <img src="image/models/models blue.png" class="card-vehicle" alt="...">
+                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_s" aria-label="models">
+                        <img src="image/models/models blue.png" class="card-vehicle" alt="models">
                         <hr class="m-0">
                         <div class="card-body">
                             <p class="card-text">Model S</p>
@@ -91,8 +94,8 @@
                     </div>
                 </div>
                 <div class="m-3 col-lg-3 col-md-3 col-11">
-                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_c">
-                        <img src="image/cybertruck/cybertruck_2.png" class="card-vehicle" alt="...">
+                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_c" aria-label="modelc">
+                        <img src="image/cybertruck/cybertruck_2.png" class="card-vehicle" alt="cybertruck">
                         <hr class="m-0">
                         <div class="card-body">
                             <p class="card-text">Cybertruck</p>
@@ -109,18 +112,18 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h3 class="modal-title">Model X</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-lg-9 col-sm-12">
-                                <img id="pmodalx" src="image/modelx/modelx black.png" class="" alt="..." style="width: 100%; height: auto;">
+                                <img id="pmodalx" src="image/modelx/modelx black.png" class="" alt="modelx" style="width: 100%; height: auto;">
                             </div>
                             <div class="col-lg-3 col-sm-12 d-flex flex-lg-column flex-md-row justify-content-center">
-                                <div class="d-flex flex-row m-2" ><button class="btn-vcolor black me-2" id="modalx_black"></button>Black</div>
-                                <div class="d-flex flex-row m-2" ><button class="btn-vcolor white me-2" id="modalx_white"></button>White</div>
-                                <div class="d-flex flex-row m-2" id="modalx_black"><button class="btn-vcolor blue me-2" id="modalx_blue"></button>Blue</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor black me-2" id="modalx_black" aria-label="."></button>Black</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modalx_white" aria-label="."></button>White</div>
+                                <div class="d-flex flex-row m-2" id="modalx_black"><button class="btn-vcolor blue me-2" id="modalx_blue" aria-label="."></button>Blue</div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
@@ -142,7 +145,7 @@
                                 Range (EPA est.)
                             </div>
                             <div class="m-3 col-lg-2 col-md-12 col-12 d-flex align-items-center justify-content-center">
-                                <button type="button" class="btn btn-outline-light">ORDER NOW</button>
+                                <button type="button" class="btn btn-outline-light" aria-label="order">ORDER NOW</button>
                             </div>
                         </div>
                     </div>
@@ -156,18 +159,18 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h3 class="modal-title">Model 3</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-lg-9 col-sm-12">
-                                <img id="pmodal3" src="image/model3/model3 red.png" class="" alt="..." style="width: 100%; height: auto;">
+                                <img id="pmodal3" src="image/model3/model3 red.png" class="" alt="model3" style="width: 100%; height: auto;">
                             </div>
                             <div class="col-lg-3 col-sm-12 d-flex flex-lg-column flex-md-row justify-content-center">
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor black me-2" id="modal3_black"></button>Black</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modal3_white"></button>White</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor red me-2" id="modal3_red"></button>Red</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor black me-2" id="modal3_black" aria-label="."></button>Black</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modal3_white" aria-label="."></button>White</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor red me-2" id="modal3_red" aria-label="."></button>Red</div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
@@ -189,7 +192,7 @@
                                 Range (EPA est.)
                             </div>
                             <div class="m-3 col-lg-2 col-md-12 col-12 d-flex align-items-center justify-content-center">
-                                <button type="button" class="btn btn-outline-light">ORDER NOW</button>
+                                <button type="button" class="btn btn-outline-light" aria-label="order">ORDER NOW</button>
                             </div>
                         </div>
                     </div>
@@ -203,18 +206,18 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h3 class="modal-title">Model Y</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-lg-9 col-sm-12">
-                                <img id="pmodaly" src="image/modely/modely.png" class="" alt="..." style="width: 100%; height: auto;">
+                                <img id="pmodaly" src="image/modely/modely.png" class="" alt="modely" style="width: 100%; height: auto;">
                             </div>
                             <div class="col-lg-3 col-sm-12 d-flex flex-lg-column flex-md-row justify-content-center">
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor red me-2" id="modaly_red"></button>Red</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modaly_white"></button>White</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor blue me-2" id="modaly_blue"></button>Blue</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor red me-2" id="modaly_red" aria-label="."></button>Red</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modaly_white" aria-label="."></button>White</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor blue me-2" id="modaly_blue" aria-label="."></button>Blue</div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
@@ -236,7 +239,7 @@
                                 Range (EPA est.)
                             </div>
                             <div class="m-3 col-lg-2 col-md-12 col-12 d-flex align-items-center justify-content-center">
-                                <button type="button" class="btn btn-outline-light">ORDER NOW</button>
+                                <button type="button" class="btn btn-outline-light" aria-label="order">ORDER NOW</button>
                             </div>
                         </div>
                     </div>
@@ -250,18 +253,18 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h3 class="modal-title">Model S</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-lg-9 col-sm-12">
-                                <img id="pmodals" src="image/models/models blue.png" class="" alt="..." style="width: 100%; height: auto;">
+                                <img id="pmodals" src="image/models/models blue.png" class="" alt="models" style="width: 100%; height: auto;">
                             </div>
                             <div class="col-lg-3 col-sm-12 d-flex flex-lg-column flex-md-row justify-content-center">
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor black me-2" id="modals_black"></button>Black</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor red me-2" id="modals_red"></button>Red</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor blue me-2" id="modals_blue"></button>Blue</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor black me-2" id="modals_black" aria-label="."></button>Black</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor red me-2" id="modals_red" aria-label="."></button>Red</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor blue me-2" id="modals_blue" aria-label="."></button>Blue</div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
@@ -283,7 +286,7 @@
                                 Range (EPA est.)
                             </div>
                             <div class="m-3 col-lg-2 col-md-12 col-12 d-flex align-items-center justify-content-center">
-                                <button type="button" class="btn btn-outline-light">ORDER NOW</button>
+                                <button type="button" class="btn btn-outline-light" aria-label="order">ORDER NOW</button>
                             </div>
                         </div>
                     </div>
@@ -297,17 +300,17 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h3 class="modal-title">Cybertruck</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-lg-9 col-sm-12">
-                                <img id="pmodalc" src="image/cybertruck/cybertruck_2.png" class="" alt="..." style="width: 100%; height: auto;">
+                                <img id="pmodalc" src="image/cybertruck/cybertruck_2.png" class="" alt="cybertruck" style="width: 100%; height: auto;">
                             </div>
                             <div class="col-lg-3 col-sm-12 d-flex flex-lg-column flex-md-row justify-content-center">
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modalc_1"></button>Pic 1</div>
-                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modalc_2"></button>Pic 2</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modalc_1" aria-label="."></button>Pic 1</div>
+                                <div class="d-flex flex-row m-2"><button class="btn-vcolor white me-2" id="modalc_2" aria-label="."></button>Pic 2</div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
@@ -329,7 +332,7 @@
                                 Range (EPA est.)
                             </div>
                             <div class="m-3 col-lg-2 col-md-12 col-12 d-flex align-items-center justify-content-center">
-                                <button type="button" class="btn btn-outline-light">ORDER NOW</button>
+                                <button type="button" class="btn btn-outline-light" aria-label="order">ORDER NOW</button>
                             </div>
                         </div>
                     </div>
@@ -363,15 +366,15 @@
             <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
-                    <input type="text" class="form-control" placeholder="Name" name="">
+                    <input id="name" for="submit" type="text" class="form-control" placeholder="Name" name="">
                 </div>
                 <div class="form-group mb-2">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                    <input id="email" for="submit" type="email" class="form-control" placeholder="Email Address" name="email">
                 </div>
                 <div class="form-group mb-2">
-                    <textarea class="form-control" rows="4"></textarea>
+                    <textarea for="submit" id="textarea" class="form-control" rows="4"></textarea>
                 </div>
-                <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
+                <input id="submit" type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
             </div>
         </div>
     </footer>
